# bassmash

./: .gitignore  NEXT_STEPS.md  README.md  idea.md  main.py  package.json  pyproject.toml
.claire/worktrees/agent-a0380b95/app/js/ui/: utils.js
app/: index.html
app/css/: style.css
app/js/: api.js  main.js  state.js  undo.js
app/js/audio/: audio-cache.js  automation-util.js  effects.js  engine.js  export.js  mixer.js  offline-render.js  sampler.js  scheduler.js  synth.js  tempo.js  waveform-peaks.js  waveform.js
app/js/ui/: browser.js  context-menu.js  export-menu.js  knob.js  mixer-panel.js  modal.js  piano-roll.js  project-picker.js  step-sequencer.js  tab-bar.js  timeline.js  topbar.js  track-manager.js
app/js/ui/workbench/: automation.js  piano-roll.js  sampler-panel.js  synth-panel.js
app/js/ui/zones/: arrangement.js  browser.js  clip-interactions.js  global-strip.js  header.js  inspector.js  mixer.js  status-bar.js  timeline-constants.js  toolbar.js  utility.js  workbench.js
cli/: analysis.py  main.py  project_ops.py  store.py  test_main.py  test_project_ops.py  test_store.py
docs/: api.md  architecture-and-roadmap.md  cli.md  design-influences.md  development.md  mcp.md  performance-plan.md  plan.md  project-format.md
docs/superpowers/plans/: 2026-04-03-bassmash-implementation.md  2026-04-03-m8s-implementation.md  2026-04-05-fl-studio-layout-audio-tracks.md
docs/superpowers/specs/: 2026-04-03-bassmash-design.md  2026-04-03-m8s-design.md  2026-04-05-fl-studio-layout-audio-tracks-design.md
mcp-server/: pyproject.toml  server.py
scripts/: generate-kit.py
server/: main.py  requirements.txt  routes.py  test_routes.py
