[project]
name = "bassmash"
version = "0.1.0"
description = "Browser-based lite DAW for hip-hop/trap production"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "httpx==0.27.0",
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
]
