[project]
name = "bassmash"
version = "0.1.0"
description = "Modern browser-based DAW with a text-editable, AI-collaborative project format"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.0",
    "python-multipart==0.0.9",
    "httpx==0.27.0",
    "typer>=0.15.1",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
]

[project.scripts]
bassmash-cli = "cli.main:app"

[tool.setuptools.packages.find]
include = ["server*", "cli*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    # pytest-asyncio 0.24 uses deprecated asyncio APIs on python 3.14+. Harmless noise.
    "ignore::DeprecationWarning:pytest_asyncio.*",
    "ignore::DeprecationWarning:starlette.*",
    "ignore::DeprecationWarning:fastapi.*",
]
